[package]
name = "tyl-metrics-port"
version = "0.1.0"
edition = "2021"
authors = ["TYL Framework Team"]
license = "AGPL-3.0"
repository = "https://github.com/the-yaml-life/tyl-metrics-port"
description = "Metrics collection port for TYL framework - hexagonal architecture interface"
homepage = "https://github.com/the-yaml-life/tyl-metrics-port"
documentation = "https://docs.rs/tyl-metrics-port"
readme = "README.md"
keywords = ["metrics", "observability", "hexagonal-architecture", "port", "tyl-framework"]
categories = ["development-tools", "rust-patterns", "api-bindings"]

[dependencies]
# TYL Framework integration (CRITICAL for port pattern)
tyl-errors = { git = "https://github.com/the-yaml-life/tyl-errors", branch = "main" }
tyl-config = { git = "https://github.com/the-yaml-life/tyl-config", branch = "main" }
tyl-logging = { git = "https://github.com/the-yaml-life/tyl-logging", branch = "main" }

# Core dependencies for port interface
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
tokio = { version = "1.0", features = ["time", "sync", "rt", "macros"] }
uuid = { version = "1.0", features = ["v4"] }
regex = "1.0"
lazy_static = "1.0"
fastrand = "2.0"

[dev-dependencies]
# Development dependencies for testing
tokio-test = "0.4"

[features]
default = []